<resources>
    <string name="set_min_filter">Set min filter</string>
    <string name="set_mag_filter">Set mag filter</string>
    <string name="app_name">AndroidEngine</string>
    <string name="HELP">Renderer in progress of implementation</string>
    <string name="INVALID_INSTANCE_STATE">Invalid Instance State</string>
    <string name="Login">Login</string>
    <string name="user_name">User Name :</string>
    <string name="password">password</string>
    <string name="user_password">User Password :</string>
    <string name="user_eMail">User E-Mail :</string>
    <string name="user">user</string>
    <string name="INCOMPATIBLE_OPENGL_DEVICE">Incompatible OpenGl device.</string>
    <string name="email_service_com">email@service.com</string>
</resources>
