<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".SoL">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:hint="@string/user"
        android:inputType="textVisiblePassword|text"
        android:nextFocusLeft="@+id/user_password"
        android:nextFocusRight="@+id/user_password"
        android:nextFocusUp="@+id/user_password"
        android:nextFocusDown="@+id/user_password"
        android:nextFocusForward="@+id/user_password"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_user_name" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_user_password" />

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginTop="160dp"
        android:text="@string/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_user_password"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/user_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <TextView
        android:id="@+id/text_user_eMail"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/user_eMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password" />

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="140dp"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/email_service_com"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_user_eMail" />

</android.support.constraint.ConstraintLayout>